# Plants-Disease-Detection

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET_CARD.md  LICENSE  License  MODEL_CARD.md  README.md  REMOTE_TRAINING_GUIDE.md  SECURITY_CLOUD_KEY_FIX.md  SECURITY_FIXES_BATCH2.md  SECURITY_FIXES_CRITICAL.md  app.py  config.py  config_minimal.py  main.py  model_server.py  model_server_vulnerable.py  pyproject.toml  requirements-collector.txt  requirements-core.txt  requirements-dev.txt  requirements-extras.txt  requirements.in  requirements.txt  run_training.ps1  test_model.py  verify_security_fixes.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  dataset_source.md  feature_request.md
.github/workflows/: security-audit.yml  tests.yml
ai/: AUTONOMOUS_MAINTENANCE_AND_EVOLUTION_WORKFLOW.md  CANONICAL_TESTING_AND_VERIFICATION_SUITE.md  KNOWLEDGE_BASE.md  LIVE_DEBUGGING_AND_OCR_UI_INSPECTOR_PROMPT.md  PROJECT_GOAL_PROMPT.md  agent_optimization_guide.md  all_repo_bug_hunter_prompt.md  all_repo_ui_ux_inspector_prompt.md  claude_code_goal_prompts.md  codex_opencode_bug_reporter_prompt.md  opencode_multi_agent_bug_reporter_prompt.md  plugin_ui_and_engineering_governance.md
clients/python/: README.md  infer.py
data/: sources.yaml
dataset/: __init__.py  data_prep.py  dataloader.py  stats.py
docs/: DATASET_STRATEGY.md  EDUCATION.md  EVA02_TRAINING_GUIDE.md  MODERN_BACKBONE_TRAINING.md  PAPER_PROJECT.md  QUICKSTART.md  RELEASE_NOTES_convnext-small-filtered-v0.1.md  RETIREMENT.md  RUN_SMOKE.md
docs/security_examples/: README.md  model_server_vulnerable.py
libs/: __init__.py  checkpoint_utils.py  data_validation.py  evaluation.py  image_security.py  inference.py  model_integrity.py  training.py  training_checkpoint.py  training_helpers.py
models/: __init__.py  model.py
scripts/: augment_rare_classes.py  check_annotations.py  check_file.py  check_lock.py  check_zips.py  connect_and_train.sh  copy_and_extract.py  download_and_merge_datasets.py  download_datasets.py  download_hf_dataset.py  download_hf_dataset_files.py  extract_tar.py  extract_testb.py  extract_val.py  merge_and_train.py  monitor_and_train.py  monitor_remote_training.py  organize_data.py  organize_val_data.py  paramiko_transfer.py  prepare_training_run.py  rebalance_splits.py  reliable_transfer.py  remote_setup.sh  run_training.py  smoke_py_compile.ps1  split_data.py  train_remote.py  transfer_improved.py
tests/: __init__.py  conftest.py  test_checkpoint_utils.py  test_config.py  test_data_validation.py  test_dataloader.py  test_export_training_layout.py  test_filter_dataset_quality.py  test_image_security.py  test_inference.py  test_main.py  test_model.py  test_model_server.py  test_python_client.py  test_smoke.py  test_training.py  test_utils.py
tools/: __init__.py
tools/dataset_checking/: README.md  dataset_checker.py  install.bat  requirements.txt  requirements.txt.backup  run_tool.bat  start.py
tools/dataset_collector/: README.md  __init__.py  app.py  build_dataset_bundle.py  convert_ai_challenger.py  convert_directory_classification.py  convert_hf_parquet_image_dataset.py  convert_plantvillage_hf.py  dataset_collector.py  dataset_maker.py  export_hf_dataset.py  export_training_layout.py  (+9 more)
utils/: __init__.py  cloud_config.py  path_security.py  utils.py
(+3 files in other folders)
