[project]
name = "plants-disease-detection"
version = "0.2.2"
description = "Plants Disease Detection - Deep learning-based plant disease classification system"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.6.0",
    "timm>=0.6.12",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "tqdm>=4.62.0",
    "Pillow>=11.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "opencv-python>=4.8.1.78",
    "albumentations>=1.1.0",
    "scikit-image>=0.19.0",
    "tensorboard>=2.7.0",
    "tensorboardX>=2.5.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0",
    "requests>=2.32.0",
    "python-dotenv>=0.19.0",
    "efficientnet-pytorch>=0.7.1",
    "torch_optimizer>=0.3.0",
    "rarfile>=4.0",
    "setuptools>=59.5.0",
]

[project.optional-dependencies]
demo = [
    "gradio>=4.44.0",
]
collector = [
    "huggingface_hub>=0.23.0",
    "pyarrow>=16.0.0",
    "selenium>=4.1.0",
    "webdriver-manager>=3.5.0",
    "beautifulsoup4>=4.10.0",
    "flickrapi>=2.4.0",
    "PyQt6>=6.4.0",
]
server = [
    "Flask>=3.0.0",
]
extras = [
    "wandb>=0.12.0",
    "onnx>=1.11.0",
    "onnxruntime>=1.10.0",
]
all = [
    "gradio>=4.44.0",
    "huggingface_hub>=0.23.0",
    "pyarrow>=16.0.0",
    "selenium>=4.1.0",
    "webdriver-manager>=3.5.0",
    "beautifulsoup4>=4.10.0",
    "flickrapi>=2.4.0",
    "PyQt6>=6.4.0",
    "Flask>=3.0.0",
    "wandb>=0.12.0",
    "onnx>=1.11.0",
    "onnxruntime>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "dataset", "libs", "models", "utils"]
